# maestro-knowledge

./: .dockerignore  .env.bad  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TODOs.md  lint.sh  load_weaviate.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  start.sh  stop.sh  temp_env_test.py  test-integration.sh  test.sh  tests.sh
.github/workflows/: ci.yml  cli_ci.yml  cli_release.yml  docker_release.yaml  e2e.yml  post_release.yaml  stale.yml  validate_workflows.sh
cli/: .golangci.yml  README.md  USAGE.md  build.sh  go.mod  go.sum  lint.sh  test.sh  test_integration.sh  tests.sh
cli/examples/: README.md  example_usage.sh
cli/src/: commands.go  completion.go  completion_cmd.go  completion_test.go  create.go  create_collection.go  create_document.go  create_vdb.go  delete.go  diagnose_search.go  get_document.go  interactive.go  interactive_test.go  list.go  main.go  mcp_client.go  progress.go  progress_test.go  query.go  resync.go  retrieve.go  search.go  status.go  status_test.go  suggestions.go  suggestions_test.go  validate.go  write.go
cli/tests/: create_collection_test.go  create_test.go  delete_test.go  get_document_test.go  go.mod  list_test.go  main_test.go  query_test.go  retrieve_test.go  search_test.go  validate_test.go  write_test.go
cli/tests/integration/: list_integration_test.go
cli/tests/yamls/: local_milvus.yaml
docs/: CLI_UX_REVIEW.md  CONTRIBUTING.md  PRESENTATION.md
examples/: README.md  example.py  mcp_example.py  milvus_example.py  weaviate_example.py
schemas/: README.md  vector-database-schema.json
src/: chunking.py  vector_db.py  vector_db_base.py  vector_db_factory.py  vector_db_milvus.py  vector_db_weaviate.py
src/chunking/: __init__.py  common.py  fixed.py  none.py  semantic_chunking.py  sentence.py
src/db/: __init__.py  vector_db_base.py  vector_db_factory.py  vector_db_milvus.py  vector_db_weaviate.py
src/maestro_mcp/: README.md  __init__.py  debug_utils.py  mcp_config.json  server.py
tests/: README.md  TEST_STRATEGY.md  __init__.py  helpers.py  test_chunking.py  test_classification.md  test_integration_examples.py  test_integration_mcp_server.py  test_mcp_query.py  test_mcp_server.py  test_milvus_list_documents_filters.py  test_query_functionality.py  test_query_integration.py  test_resync.py  test_server_imports.py  test_service_databases.py  test_unit_models.py  test_utils.py  test_vector_database_yamls.py  test_vector_db.py  test_vector_db_base.py  test_vector_db_factory.py  test_vector_db_milvus.py  test_vector_db_weaviate.py
tests/chunking/: test_common.py  test_fixed.py  test_none.py  test_semantic_chunking.py  test_sentence.py
tests/docs/: e2e_coverage_analysis.md  e2e_testing.md
tests/e2e/: README.md  __init__.py  common.py  conftest.py  test_functions.py  test_functions_simple.py  test_mcp_milvus_e2e.py  test_mcp_weaviate_e2e.py  test_mcp_weaviate_simple.py
tests/setup/: milvus_arm64.sh  milvus_e2e.sh  weaviate_e2e.sh
tests/yamls/: invalid-test.yaml  remote_weaviate.yaml  test_local_milvus.yaml  test_remote_weaviate.yaml
tools/: bump_version.py  e2e.sh  lint.sh  mcp-e2e.sh  tail-logs.sh  test-integration.sh
