[project]
name = "maestro-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.1",
    "fastapi>=0.109.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-docx>=0.8.11",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.5",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
    "watchdog>=3.0.0",
    "weaviate-client[agents]>=4.0.0",
    "pymilvus>=2.5.14",
    "pyyaml>=6.0.2",
    "jsonschema>=4.25.0",
    "fastmcp>=2.10.6",
]

[tool.ruff.lint]
# Disable E402 (module level import not at top) globally
# This is needed due to our test structure with sys.path.append and warnings.filterwarnings
ignore = ["E402"]

[tool.pytest.ini_options]
# Suppress expected warnings during testing
filterwarnings = [
    # Suppress protobuf version warnings from Weaviate dependencies
    "ignore::UserWarning:google.protobuf.runtime_version",
    # Suppress our own warning in test_list_collections_exception test
    "ignore::UserWarning:src.db.vector_db_weaviate",
]
# Enable async test support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
