[project]
name = "maestro-knowledge"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "weaviate-client[agents]>=4.16.5",
    "pymilvus>=2.5.14",
    "pyyaml>=6.0.2",
    "jsonschema>=4.25.0",
    "fastmcp>=2.11.0",
    "six>=1.17.0",
]

[tool.ruff.lint]
# Disable E402 (module level import not at top) globally
# This is needed due to our test structure with sys.path.append and warnings.filterwarnings
ignore = ["E402"]

[tool.pytest.ini_options]
# Suppress expected warnings during testing
filterwarnings = [
    # Suppress protobuf version warnings from Weaviate dependencies
    "ignore::UserWarning:google.protobuf.runtime_version",
    # Suppress our own warning in test_list_collections_exception test
    "ignore::UserWarning:src.db.vector_db_weaviate",
]
# Enable async test support
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "requests-mock>=1.12.1",
    "beautifulsoup4>=4.13.4",
    "ruff>=0.12.7",
    "bandit>=1.8.6",
    "safety>=3.2.9",
]
